New CSS Grid responsive site project

--- a/index.html
+++ b/index.html
@@ -67,12 +67,19 @@
     <section class="project">
       <div class="container">
         <h2><a href="../CSS-Grid-Mobile-First-Website/index.html" target="_blank">CSS Grid Mobile First Site</a></h2>
-        <p>Grid CSS Responsive Website Layout - "Mobile First" Design. This is a "mobile first" single page website layout using the CSS Grid. We will use modern techniques including relative em units, media queries and even a little flex.</p>
+        <p>Grid CSS Responsive Website Layout - "Mobile First" Design. This is a "mobile first" single page website layout using the CSS Grid. It uses modern techniques including relative em units, media queries and even a little flex.</p>
+      </div>
+    </section>
+
+    <section class="project">
+      <div class="container">
+        <h2><a href="../CSS-Grid-Responsive-Site/index.html" target="_blank">CSS Grid Responvie Site</a></h2>
+        <p>Responsive Grid CSS Website Layout. This website is a responsive Grid CSS layout using grid template areas. We will also be using other modern CSS features and techniques like css variables, rem units and flexbox. It also uses font-awesome and images from unsplash.</p>
       </div>
     </section>
 
     <footer>
-      <p>Acme Web Design &copy; 2018</p>
+      <p>Elmwood Media &copy; 2018</p>
     </footer>
 
   </body>
