--- a/index.html
+++ b/index.html
@@ -9,45 +9,24 @@
 
     <header>
       <div class="container">
-        <h1>List Of Project Works</h1>
-        <p>List of projects.</p>
+        <h1>List Of Sample Project Work</h1>
       </div>
     </header>
 
 <!-- NOTE: List of projects -->
+<!-- WARNING: Add new projects to top of liest -->
 
     <section class="project">
       <div class="container">
-        <h2><a href="../basichtml/index.html" target="_blank">Basic HTML Site</a></h2>
-        <p>Basic html sample pages, listing out some simple elements. No CSS styling at all!</p>
+        <h2><a href="../CSS-Grid-Responsive-Site/index.html" target="_blank">CSS Grid Responsive Site</a></h2>
+        <p>Responsive Grid CSS Website Layout. This website is a responsive Grid CSS layout using grid template areas. We will also be using other modern CSS features and techniques like css variables, rem units and flexbox. It also uses font-awesome and images from unsplash.</p>
       </div>
     </section>
 
     <section class="project">
       <div class="container">
-        <h2><a href="../csscheatsheet/index.html" target="_blank">CSS Cheat Sheet</a></h2>
-        <p>My fun CSS cheat sheet page</p>
-      </div>
-    </section>
-
-    <section class="project">
-      <div class="container">
-        <h2><a href="../basicjavascript/index.html" target="_blank">Basic Javascript</a></h2>
-        <p>A basic Javascript sample page.</p>
-      </div>
-    </section>
-
-    <section class="project">
-      <div class="container">
-        <h2><a href="../Basic-HTML-5-Responsive-Site/index.html" target="_blank">Basic HTML 5 Responsive Site</a></h2>
-        <p>This is an example of a HTML 5 website built using semantic tags and a responsive layout.</p>
-      </div>
-    </section>
-
-    <section class="project">
-      <div class="container">
-        <h2><a href="../Coming-Soon-Landing/index.html" target="_blank">Coming Soon Landing Page</a></h2>
-        <p>Custom responsive landing page using HTML5/CSS/Javascript.No frameworks! Responvie for mobile and also for height resizing. Uses Flexbox, ES6 Template String and favicon for better branding.</p>
+        <h2><a href="../CSS-Grid-Mobile-First-Website/index.html" target="_blank">CSS Grid Mobile First Site</a></h2>
+        <p>Grid CSS Responsive Website Layout - "Mobile First" Design. This is a "mobile first" single page website layout using the CSS Grid. It uses modern techniques including relative em units, media queries and even a little flex.</p>
       </div>
     </section>
 
@@ -66,17 +45,40 @@
 
     <section class="project">
       <div class="container">
-        <h2><a href="../CSS-Grid-Mobile-First-Website/index.html" target="_blank">CSS Grid Mobile First Site</a></h2>
-        <p>Grid CSS Responsive Website Layout - "Mobile First" Design. This is a "mobile first" single page website layout using the CSS Grid. It uses modern techniques including relative em units, media queries and even a little flex.</p>
+        <h2><a href="../Coming-Soon-Landing/index.html" target="_blank">Coming Soon Landing Page</a></h2>
+        <p>Custom responsive landing page using HTML5/CSS/Javascript.No frameworks! Responvie for mobile and also for height resizing. Uses Flexbox, ES6 Template String and favicon for better branding.</p>
       </div>
     </section>
 
     <section class="project">
       <div class="container">
-        <h2><a href="../CSS-Grid-Responsive-Site/index.html" target="_blank">CSS Grid Responvie Site</a></h2>
-        <p>Responsive Grid CSS Website Layout. This website is a responsive Grid CSS layout using grid template areas. We will also be using other modern CSS features and techniques like css variables, rem units and flexbox. It also uses font-awesome and images from unsplash.</p>
+        <h2><a href="../Basic-HTML-5-Responsive-Site/index.html" target="_blank">Basic HTML 5 Responsive Site</a></h2>
+        <p>This is an example of a HTML 5 website built using semantic tags and a responsive layout.</p>
       </div>
     </section>
+
+    <section class="project">
+      <div class="container">
+        <h2><a href="../basicjavascript/index.html" target="_blank">Basic Javascript</a></h2>
+        <p>A basic Javascript sample page.</p>
+      </div>
+    </section>
+
+    <section class="project">
+      <div class="container">
+        <h2><a href="../csscheatsheet/index.html" target="_blank">CSS Cheat Sheet</a></h2>
+        <p>My fun CSS cheat sheet page</p>
+      </div>
+    </section>
+
+    <section class="project">
+      <div class="container">
+        <h2><a href="../basichtml/index.html" target="_blank">Basic HTML Site</a></h2>
+        <p>Basic html sample pages, listing out some simple elements. No CSS styling at all!</p>
+      </div>
+    </section>
+
+<!-- WARNING: Put new projects at TOP of project list -->
 
     <footer>
       <p>Elmwood Media &copy; 2018</p>
