--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <section class="project">
       <div class="container">
         <h2><a href="../CSS-Grid-Responsive-Site/index.html" target="_blank">CSS Grid Responsive Site</a></h2>
-        <p>Responsive Grid CSS Website Layout. This website is a responsive Grid CSS layout using grid template areas. We will also be using other modern CSS features and techniques like css variables, rem units and flexbox. It also uses Font Awesome 5 SVG and images from unsplash.</p>
+        <p>Responsive Grid CSS Website Layout. This website is a responsive Grid CSS layout using grid template areas. We will also be using other modern CSS features and techniques like CSS variables, rem units and Flexbox. It also uses Font Awesome 5 SVG and images from Unsplash.</p>
       </div>
     </section>
 
