--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
 
     <section class="project">
       <div class="container">
+        <h2><a href="../Emmet-Sandbox\abbr.html" target="_blank">Emmet For Faster HTML & CSS Workflow</a></h2>
+        <p>This is a look at Emmet as a web development tool for creating faster HTML and CSS using abbreviations. It covesr the basics and look at nesting, siblings, multiplication and more.</p>
+      </div>
+    </section>
+
+    <section class="project">
+      <div class="container">
         <h2><a href="../basicjavascript/index.html" target="_blank">Basic Javascript</a></h2>
         <p>A basic Javascript sample page.</p>
       </div>
