--- a/index.html
+++ b/index.html
@@ -2,10 +2,64 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="./css/master.css">
-    <title>Overview</title>
+    <link rel="stylesheet" href="./assets/css/master.css">
+    <title>Blue Elm Media | Web Development & Programming</title>
+    <meta name="keywords" content="programming, web development, web programming, javascript, html, CSS, CSS html programming, full-stack development, full-stack programming, full stack">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
   </head>
+
   <body>
+
+    <nav id="navigation" class="navbar navbar-dark navbar-expand-lg bg-dark fixed-top">
+    <div class="container">
+      <div class="navbar-header">
+        <a class="navbar-brand page-scroll" href="#page-top">
+          <img src="assets/images/logo.png" alt="" class="logo-text-white logo-large">
+          <img src="assets/images/logo_small.png" alt="" class="logo-small" "="" logo-text-white"="">
+        </a>
+
+        <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbar-kania" aria-controls="navbar-kania" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </div>
+      <!-- //.navbar-header -->
+
+      <div class="navbar-collapse collapse flex-row-reverse" id="navbar-kania">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link page-scroll active" href="#page-top">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link page-scroll" href="#about">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link page-scroll" href="#courses">Udemy</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link page-scroll" href="#youtube">YouTube</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link page-scroll" href="#eduonix">Eduonix</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link page-scroll" href="#support">Patreon</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link page-scroll" href="#contact">Contact</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link page-scroll" href="#work">
+              <div id="___ytsubscribe_0" style="text-indent: 0px; margin: 0px; padding: 0px; background: transparent; border-style: none; float: none; line-height: normal; font-size: 1px; vertical-align: baseline; display: inline-block; width: 123px; height: 24px;"><iframe ng-non-bindable="" frameborder="0" hspace="0" marginheight="0" marginwidth="0" scrolling="no" style="position: static; top: 0px; width: 123px; margin: 0px; border-style: none; left: 0px; visibility: visible; height: 24px;" tabindex="0" vspace="0" width="100%" id="I0_1527876486486" name="I0_1527876486486" src="https://www.youtube.com/subscribe_embed?usegapi=1&amp;channel=techguyweb&amp;layout=default&amp;count=default&amp;origin=https%3A%2F%2Fwww.traversymedia.com&amp;gsrc=3p&amp;ic=1&amp;jsh=m%3B%2F_%2Fscs%2Fapps-static%2F_%2Fjs%2Fk%3Doz.gapi.en.eWKtFEKYdfw.O%2Fm%3D__features__%2Fam%3DQQE%2Frt%3Dj%2Fd%3D1%2Frs%3DAGLTcCPx2P2223oQqo0S5XtEKpm7fnFojg#_methods=onPlusOne%2C_ready%2C_close%2C_open%2C_resizeMe%2C_renderstart%2Concircled%2Cdrefresh%2Cerefresh%2Conload&amp;id=I0_1527876486486&amp;_gfid=I0_1527876486486&amp;parent=https%3A%2F%2Fwww.traversymedia.com&amp;pfname=&amp;rpctoken=23813849" data-gapiattached="true"></iframe></div>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <!-- //.navbar-collapse -->
+    </div>
+    <!-- //.container -->
+  </nav>
 
     <header>
       <div class="container">
