--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
   </head>
 
-  <body>
+  <body id="page-top">
 
+   <!-- Navigation Start -->
     <nav id="navigation" class="navbar navbar-dark navbar-expand-lg bg-dark fixed-top">
     <div class="container">
       <div class="navbar-header">
@@ -60,6 +61,7 @@
     </div>
     <!-- //.container -->
   </nav>
+  <!-- //Navigation End -->
 
     <header>
       <div class="container">
